syntax = "proto3";

package pipeline;
import "api.proto";
import "common.proto";

// Pipeline represents a pipeline entity.
message Pipeline {
  string environment_key = 1;
  string pipeline_key = 2;
  string pipeline_name = 3;
  string description = 4;
  int32 sort_order = 5;
  bool is_active = 6;
}

// CreatePipelineRequest is used for creating a pipeline.
message CreatePipelineRequest {
  string environment_key = 1;
  Pipeline pipeline = 2;
}

// UpdatePipelineRequest is used for updating a pipeline.
message UpdatePipelineRequest {
  string environment_key = 1;
  Pipeline pipeline = 2;
}

// DeletePipelineRequest is used for deleting a pipeline.
message DeletePipelineRequest {
  string environment_key = 1;
  string pipeline_key = 2;
}

// ListPipelineRequest is used to list pipelines with filters.
message ListPipelineRequest {
  string environment_key = 1;
  bool is_active = 2;
}

// PipelineDetailRequest is used to get a specific pipeline.
message PipelineDetailRequest {
  string environment_key = 1;
  string pipeline_key = 2;
}

// PipelineData is the data wrapper for a single pipeline.
message PipelineData {
  Pipeline pipeline = 1;
}

// PipelineListData is the data wrapper for pipeline list.
message PipelineListData {
  int32 total = 1;
  repeated Pipeline list = 2;
}

// PipelineResponse is a unified response for single pipeline operations.
// Format: { code, msg, data: { pipeline } }
message PipelineResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
  PipelineData data = 4;
}

// PipelineListResponse is a unified response for pipeline list.
// Format: { code, msg, data: { total, list } }
message PipelineListResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
  PipelineListData data = 4;
}

// PipelineDetailResponse is a unified response for pipeline detail.
// Format: { code, msg, data: { pipeline } }
message PipelineDetailResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
  PipelineData data = 4;
}

// DeletePipelineResponse is a unified response for delete operation.
// Format: { code, msg, data: null }
message DeletePipelineResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
}

// PipelineService handles pipeline CRUD operations.
service PipelineService {
  // Create creates a new pipeline.
  rpc Create(CreatePipelineRequest) returns (PipelineResponse) {
    option (api.post) = "/api/v1/pipeline/create";
  }

  // Update updates an existing pipeline.
  rpc Update(UpdatePipelineRequest) returns (PipelineResponse) {
    option (api.post) = "/api/v1/pipeline/update";
  }

  // Delete removes a pipeline.
  rpc Delete(DeletePipelineRequest) returns (DeletePipelineResponse) {
    option (api.post) = "/api/v1/pipeline/delete";
  }

  // List returns a list of pipelines.
  rpc List(ListPipelineRequest) returns (PipelineListResponse) {
    option (api.get) = "/api/v1/pipeline/list";
  }

  // Detail returns a specific pipeline.
  rpc Detail(PipelineDetailRequest) returns (PipelineDetailResponse) {
    option (api.get) = "/api/v1/pipeline/detail";
  }
}
